--- a/assets/calendario.css
+++ b/assets/calendario.css
@@ -31,12 +31,13 @@
   height: 100%;
   overflow: auto;
   background-color: rgba(0, 0, 0, 0.4);
+  z-index: 2;
 }
 
 .modal-content {
   background-color: #fefefe;
   margin: auto;
-  width: 75vh;
+  max-width: 75vh;
   padding: 4vh;
   border: 1px solid #888;
   box-shadow: 5px 0 18px -3px rgb(0 0 0 / 15%);
@@ -153,6 +154,7 @@ select {
   position: relative;
   display: flex;
   width: 100%;
+  height: 10vh;
   border-radius: 10px;
   margin-bottom: 10px;
   -webkit-transition: all 0.3s ease;
@@ -217,6 +219,7 @@ select {
   float: left;
   border-style: none;
   background-color: #755eb5;
+  height: 10vh;
   transition: all 0.3s ease, transform 0.5s ease, -webkit-transform 0.5s
 }
 
@@ -274,4 +277,18 @@ select {
   border-radius: 1vh;
   background-color: rgb(179 255 158);
   --background-color: rgb(255, 143, 143);
+}
+
+button {
+  position: absolute;
+  z-index: 2;
+  width: 10vh;
+  aspect-ratio: 1 / 1;
+}
+
+.b0 {
+  left: 0;
+}
+.b1 {
+  right: 0;
 }
